--- a/frontend/frontendapp/src/App.css
+++ b/frontend/frontendapp/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #666;
+  background-color: #0F0F0F;
   height: 100vh;
 }
 
@@ -38,3 +38,171 @@
     transform: rotate(360deg);
   }
 }
+
+.player {
+  height: 8rem;
+  width: 8rem;
+}
+
+.table-container {
+  display: flex;
+}
+
+.table-custom {
+  flex: 1;
+  text-align: left;
+  color: #fff;
+  border-collapse: collapse;
+}
+
+.table-custom thead tr {
+  background-color: #353535;
+  position: "sticky"; 
+  top: 0;
+}
+
+.table-custom tbody tr {
+  border-bottom: 1px solid #838383;
+  cursor: pointer;
+}
+
+.table-custom tbody tr:hover {
+  background-color: #353535;
+}
+
+.table-custom th {
+  padding: 0.8rem 1rem;
+}
+
+.table-custom td {
+  padding: 0.5rem 1rem;
+}
+
+.dash-container {
+  display: flex;
+  flex-direction: column;
+  /* margin-top: 64px; */
+  padding: 64px 4rem 0 4rem;
+  height: 100%;
+}
+
+.dash-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  padding: 1rem 0;
+}
+
+.dash-header h2 {
+  margin: 0;
+  text-align: left;
+}
+
+.dash-header button {
+  background-color: #ececec;
+  color: #555;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  padding: 0.8rem 1.2rem;
+  cursor: pointer;
+}
+
+.dash-header button:hover {
+  background-color: #ffffff;
+  color: #6b6b6b;
+}
+
+.dash-content::-webkit-scrollbar {
+  display: none;
+}
+
+.dash-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: #242424;
+  max-height: 80%;
+  border-radius: 1rem;
+  overflow: scroll;
+  border: 0.1rem solid #838383;
+}
+
+.modal-container {
+  
+}
+
+.modal-content, .modal-content-loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0.5rem;
+  background-color: #353535;
+  min-width: 40rem;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.modal-content-loading {
+  background-color: transparent;
+  color: #fff;
+}
+
+.modal-content h1 {
+  margin: 0;
+  color: #fff;
+  padding: 1rem 0;
+}
+
+.modal-inside-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 2rem;
+}
+
+.modal-inside-content button:hover {
+  opacity: 0.9;
+}
+
+.input-container-custom {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* background-color: #61dafb; */
+  margin-bottom: 1rem;
+}
+
+.input-container-custom label {
+  text-align: left;
+  width: 60%;
+  padding: 0 -0.5rem;
+  margin-bottom: 0.2rem;
+  color: #fff;
+}
+
+.input-container-custom input:focus, .btn:focus {
+  outline: none;
+}
+
+.input-container-custom input {
+  background-color: white;
+  border-radius: 0.5rem;
+  height: 2.5rem;
+  width: 100%;
+  border: 1px solid #dcdcdc;
+  padding: 0 0.5rem;
+}
+
+.row-horizontal {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.error-message {
+  text-align: center;
+  color: #db4c4c;
+  /* margin-bottom: 1rem; */
+} 
