--- a/frontend/frontendapp/src/index.css
+++ b/frontend/frontendapp/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #666;
+  height: 100%;
 }
 
 code {
