--- a/frontend/frontendapp/src/App.css
+++ b/frontend/frontendapp/src/App.css
@@ -248,3 +248,39 @@
 .css-1dimb5e-singleValue {
   color: #777 !important;
 }
+
+.cards-container {
+  /* background-color: #db4c4c; */
+  display: flex;
+  gap: 1rem;
+}
+
+.card-container {
+  background-color: #777;
+  display: flex;
+  min-width: 15rem;
+  min-height: 8rem;
+  border-radius: 0.5rem;
+  color: #fff;
+  padding: 1rem;
+}
+
+.card-icon {
+  flex: 1;
+}
+
+.card-header {
+  flex: 0;
+}
+
+.card-header h3 {
+  margin: 0;
+}
+
+.card-content {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+}
